fix: fix containers on mobile

--- a/src/app/my-profile/page.module.scss
+++ b/src/app/my-profile/page.module.scss
@@ -8,7 +8,6 @@
 .logOutBtn {
   color: var(--Main-03, #a687ff);
   text-align: center;
-  font-family: IBM Plex Sans;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
