--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -17,5 +17,6 @@
   align-items: center;
   @include mobile {
     letter-spacing: -1.08px;
+    display: none;
   }
 }
